Updates from Overleaf

--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -197,26 +197,26 @@ $\mu^+$                   & $e^+ + \nue + \numubar$       & 100
 \end{table}
 
 \newpage
-A current of 174 kA is supplied to the magnetic horn in 143 $\mu$s pulses which corresponds to the frequency of the incident protons. The direction of the current may be reversed allowing for the focusing of positively or negatively charged particles. Since the charge of the decaying hadrons is linked to the type of neutrino produced, the ability to focus both positively and negatively charged particles allows the \gls{bnb} to run in neutrino or anti-neutrino mode \cite{BNB_flux}. Pions are the primary particle produced from the incident protons hence the \gls{bnb} is muon (anti-)neutrino dominated. The percentage neutrino flavour composition of the \gls{bnb} is given in \TableRef{Table: BNB composition} for both neutrino and anti-neutrino mode.
+A current of 174 kA is supplied to the magnetic horn in 143 $\mu$s pulses which corresponds to the frequency of the incident protons. The direction of the current may be reversed allowing for the focusing of positively or negatively charged particles. Since the charge of the decaying hadrons is linked to the type of neutrino produced, the ability to focus both positively and negatively charged particles allows the \gls{bnb} to run in neutrino or antineutrino mode \cite{BNB_flux}. Pions are the primary particle produced from the incident protons hence the \gls{bnb} is muon (anti-)neutrino dominated. The percentage neutrino flavour composition of the \gls{bnb} is given in \TableRef{Table: BNB composition} for both neutrino and antineutrino mode.
 
 
 \begin{table}[h]
 \begin{tabular}{ccc}
-Neutrino Flavour & \% in Neutrino Mode & \% in Anti-neutrino Mode \\ \hline
+Neutrino Flavour & \% in Neutrino Mode & \% in Antineutrino Mode \\ \hline
 $\numu$        & 93.6                & 15.71                    \\
 $\numubar$  & 5.86                & 83.73                    \\
 $\nue$          & 0.52                & 0.2                      \\
 $\nuebar$    & 0.05                & 0.4                     
 \end{tabular}
-\caption[BNB flavour composition.]{The neutrino flavour composition of the \gls{bnb} when it is running in either neutrino or anti-neutrino mode \cite{BNB_flux}.}
+\caption[BNB flavour composition.]{The neutrino flavour composition of the \gls{bnb} when it is running in either neutrino or antineutrino mode \cite{BNB_flux}.}
 \label{Table: BNB composition}
 \end{table}
 
- The neutrino flux of the BNB was simulated by the MiniBooNE collaboration for both neutrino and anti-neutrino mode \cite{BNB_flux}. The flux of the electron and muon (anti-)neutrinos in each of the three \gls{sbn} detectors is shown in \FigureRef{fig: SBN flux}.
+ The neutrino flux of the BNB was simulated by the MiniBooNE collaboration for both neutrino and antineutrino mode \cite{BNB_flux}. The flux of the electron and muon (anti-)neutrinos in each of the three \gls{sbn} detectors is shown in \FigureRef{fig: SBN flux}.
  \begin{figure}[h!]
      \centering
      \includegraphics[width = \textwidth]{figures-chap3/SBN_flux.png}
-     \caption[Neutrino fluxes in SBN.]{The predicted flux of the \gls{bnb} at \gls{sbnd} (left), \gls{microboone} (middle) and \gls{icarus} (right) for both electron and muon neutrinos and anti-neutrinos \cite{SBN_Proposal}.}
+     \caption[Neutrino fluxes in SBN.]{The predicted flux of the \gls{bnb} at \gls{sbnd} (left), \gls{microboone} (middle) and \gls{icarus} (right) for both electron and muon neutrinos and antineutrinos \cite{SBN_Proposal}.}
      \label{fig: SBN flux}
 \end{figure}
 The systematic uncertainties associated with the \gls{bnb} account for an error of $\sim 9\%$ at the peak of the $\numu$ flux with a larger error for energies either side of the peak. The systematic uncertainties are mainly due to determining the rate and spectrum of neutrinos for each proton on target, determining the rate and spectrum of secondary particles produced from protons interacting with the beryllium target, the rate of hadronic interactions, the focusing properties of the magnetic horn and the beamline geometry \cite{BNB_flux}. 
