--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -20,7 +20,7 @@ Performing an analysis within VALOR involves a number of physics parameters that
 The data inputs used for an oscillation analysis are mainly provided in the form of \glspl{mct}, which provide a mapping between true and reconstructed variables. They are constructed following the full event processing chain which includes event simulation, reconstruction and selection. Since the \glspl{mct} include the effects from reconstruction and selection, it is not feasible to directly recreate them using only information on the flux, cross-section and efficiency. These \glspl{mct}, \textit{T}, encapsulate a number of quantities describing a given event and are listed below,
 
 \begin{itemize}
-    \item[b] -- Beam configuration e.g. neutrino or anti-neutrino mode,
+    \item[b] -- Beam configuration e.g. neutrino or antineutrino mode,
     \item[d] -- Detector e.g. \gls{sbnd}, \gls{microboone} or \gls{icarus},
     \item[s] -- Topological event selection e.g. \nue\gls{cc}-inclusive, \numu\gls{cc}-inclusive,
     \item[m] -- True Reaction Mode e.g. \numu~\gls{ccqe}, \nue~\gls{cc} 1$\pi^{\pm}$,
